--- a/package.json
+++ b/package.json
@@ -40,31 +40,22 @@
   "dependencies": {
     "@edsilv/http-status-codes": "^1.0.3",
     "@iiif/vocabulary": "^1.0.26",
-    "chai": "^2.3.0",
-    "cross-env": "^7.0.3",
-    "dts-bundle-generator": "^9.1.0",
-    "finalhandler": "^1.2.0",
-    "isomorphic-unfetch": "^3.0.0",
-    "lodash": "^4.17.21",
-    "mocha": "^10.2.0",
-    "node-fetch": "2",
-    "prettier": "^3.1.1",
-    "rimraf": "^5.0.5",
-    "serve-static": "^1.15.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.3",
-    "unfetch": "^4.2.0",
-    "webpack": "^5.89.0",
     "color-string": "1.9",
-    "threejs-math": "^0.147"
+    "threejs-math": "^0.147",
+    "lodash" : "^4.17.21",
+    "isomorphic-unfetch" : "^3.0.0"
   },
   "directories": {
     "test": "test"
   },
   "devDependencies": {
-    "cpy-cli": "^5.0.0",
-    "typedoc": "^0.25.8",
-    "webpack-cli": "^5.1.4"
+    "typescript": "~5.3.3",
+    "rimraf" : "^5.0.5",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "ts-loader" : "^9.5.1",
+    "cross-env" : "^7.0.3",
+    "dts-bundle-generator" : "^9.1.0"
   },
   "publishConfig": {
     "access": "public"
