--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ matrix.node }}
       - run: npm ci
       - run: npm run build
-      # - run: npm run test
+      - run: npm run test
       # @todo these are not working currently.
       # - run: node pkg-tests/node-load.js
       # - run: node pkg-tests/node-load.mjs
